most up to date

--- a/sick-fits/frontend/.vscode/settings.json
+++ b/sick-fits/frontend/.vscode/settings.json
@@ -16,5 +16,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
-  "prettier.disableLanguages": ["javascript", "javascriptreact"]
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
+  "prettier.disableLanguages": ["javascript", "javascriptreact"],
 }
